--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "http": "^0.0.1-security",
+    "simple-json-db": "^2.0.0",
     "socket.io": "^4.8.1",
     "ws": "^8.18.0"
   },
